# BoostStudy

./: .gitignore  P1.md  README.md
Part I/: Info.md
Part I/Ch. 1/1.SoleOwnership/: 1.SoleOwnership.sln  CMakeLists.txt  main.cpp
Part I/Ch. 1/1.SoleOwnership/Project1/: Project1.vcxproj  Source.cpp
Part I/Ch. 1/2.SharedOwnership/: 2.SharedOwnership.sln  CMakeLists.txt  main.cpp
Part I/Ch. 1/2.SharedOwnership/2.SharedOwnership/: 2.SharedOwnership.vcxproj  Source.cpp
Part I/Ch. 1/3.SpecialSmartPointers/: Complex.cpp
Part I/Ch. 1/3.SpecialSmartPointers/3.1 WeakPtr/3.SpecialSmartPointers/: Source.cpp
Part I/Ch. 2/: Сh. 2.sln
Part I/Ch. 2/Сh. 2/: Source.cpp  Сh. 2.vcxproj
Part I/Ch. 3/: Ch. 3.sln
Part I/Ch. 3/Ch. 3/: Ch. 3.vcxproj  Complex.cpp  Source.cpp
Part I/Ch. 3/Ex.1.2/: Ex.1.2.sln
Part I/Ch. 3/Ex.1.2/Ex.1.2/: Ex.1.2.vcxproj  Source.cpp
Part I/Ch. 3/Ex.1.2/Ex.1.2/Debug/: vc141.idb
Part I/Ch. 3/Ex.1.2/Ex.1.2/Debug/Ex.1.2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ex.1.2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Part I/Ch. 4/4.Boost.Pool/: 4.Boost.Pool.vcxproj  Source.cpp
Part I/Ch. 4/4.Boost.Pool/Debug/: vc141.idb
Part I/Ch. 4/4.Boost.Pool/Debug/4.Boost.Pool.tlog/: 4.Boost.Pool.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Part I/Ch. 4/Debug/: 4.Boost.Pool.ilk
Part.01/Ch.01.SmartPointers/1.SoleOwnership/: CMakeLists.txt  main.cpp
Part.01/Ch.01.SmartPointers/3.SpecialSmartPointers/: CMakeLists.txt  Complex.hpp  main.cpp
Part.01/Ch.01.SmartPointers/3.SpecialSmartPointers/3.1 WeakPtr/: 3.1 WeakPtr.sln
Part.01/Ch.01.SmartPointers/3.SpecialSmartPointers/3.1 WeakPtr/3.SpecialSmartPointers/: 3.SpecialSmartPointers.vcxproj
Part.01/Ch.02.PointerContainer/: CMakeLists.txt  main.cpp
Part.01/Ch.04.Pool/: 4.Boost.Pool.sln
Part.02/06.LexicalCast/: CMakeLists.txt  main.cpp
Part.02/07.Format/: CMakeLists.txt
Part.02/07.Format/07.Format/: main.cpp
Part.02/08.Regex/: CMakeLists.txt  main.cpp
Part.02/09.Xpressive/: CMakeLists.txt  main.cpp
Part.02/10.tokenizer/: CMakeLists.txt  main.cpp
Part.02/11.Spirit/: API_Samples.cpp  API_Samples.hpp  CMakeLists.txt  main.cpp
Part.02/11.Spirit/libs/: API_Samples.cpp  API_Samples.hpp  BasicParser.cpp  BasicParser.hpp
Part.02/5.StringAlgorithms/: CMakeLists.txt  main.cpp
Part.03/12.MultiIndex/: main.cpp
Part.03/12.MultiIndex/libs/: animal.cpp  animal.hpp
Part.03/13.Bimap/: CMakeLists.txt  main.cpp
Part.03/13.Bimap/libs/: animal.cpp  animal.hpp
Part.03/14.Array/: CMakeLists.txt  main.cpp
Part.03/15.Unordered/: CMakeLists.txt  main.cpp
Part.03/15.Unordered/libs/: animal.cpp  animal.hpp
Part.03/17.Heap/: CMakeLists.txt  main.cpp
